<?xml version="1.0" encoding="utf-8"?>
<com.fineos.superscreenshot.funscreenshot.Cling 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="#8a000000"
	 android:visibility="gone" >

	<TextView 
		android:id="@+id/tips_text"
	    android:layout_width="300.5dp"
	    android:layout_height="81.5dp"
	    android:background="@drawable/message_dialog"
	    android:paddingTop="8dp"
	    android:paddingLeft="20dp"
	    android:paddingRight="5dp"
	    android:layout_marginTop="114dp"
        android:layout_gravity="center_horizontal"
	    android:text="@string/scrawl_tips_intr_text"/>
    <ImageView 
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_marginTop="216dp"
        />
    <Button 
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/sure_bg"
        android:text="@string/scrawl_tips_sure_text"
		android:textSize="30px"
        android:layout_marginBottom="138dp"
		android:visibility="gone"
        android:layout_gravity="bottom|center_horizontal"/>
	<TextView 
		android:id="@+id/region_text_view"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="300dp"
		android:textSize="36px"
		android:visibility="gone"
        android:layout_gravity="center_horizontal"
		android:textColor="#008aff"
	    android:text="@string/region_text"/>

</com.fineos.superscreenshot.funscreenshot.Cling>
